--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,19 @@ header {
         display: none;
     }
 }
+
+/* FOOTER */
+footer {
+    width: 100%;
+    height: 80px;
+    padding: 20px 10px 10px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #dadada;
+}
+
+.footer-text {
+    font-weight: 500;
+    text-align: center;
+}
