--- a/src/App.css
+++ b/src/App.css
@@ -155,3 +155,104 @@ footer {
     max-width: 100px;
     max-height: 100px;
 }
+
+/* 
+HOME PAGE
+ */
+.item-list {
+    /* border: 2px solid black; */
+    max-width: 1200px;
+    margin: auto;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.item-card-container {
+    width: 25%;
+    padding: 10px;
+}
+
+.item-card {
+    /* border: 1px solid red; */
+    /* width: 33.33%;
+     */
+    width: 100%;
+    border-radius: 12px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+.item-card-imgs {
+    height: 250px;
+    display: flex;
+    overflow: scroll;
+}
+
+.item-card-imgs::-webkit-scrollbar {
+    display: none;
+}
+
+.item-card-imgs img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.img-card-price {
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.img-card-body {
+    padding: 8px 8px 0px 8px;
+}
+
+.img-card-title {
+    font-size: 14px;
+    font-weight: 600;
+    color: #666;
+}
+
+.img-card-row-space-between {
+    display: flex;
+    justify-content: space-between;
+}
+
+.img-card-location {
+    font-size: 12px;
+    color: #666;
+}
+
+.img-card-footer {
+    padding: 0 8px 8px 8px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    color: #666;
+    font-weight: 300;
+}
+
+@media only screen and (max-width: 1200px) {
+    .item-card-container {
+        width: 33.33%;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .item-card-container {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .item-card-container {
+        width: 100%;
+    }
+}
+
+.next-page {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+}
