--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
+/* 
+*LOADING
+*/
+.loading {
+    width: 100%;
+    height: 100vh;
+}
+
+.loading-container {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-container img {
+    width: 400px;
+}
+
 /*
 * HEADER
 */
@@ -257,4 +279,11 @@ HOME PAGE
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
+}
+
+/* ITEM DETAIL PAGE */
+.item-detail {
+    max-width: 1200px;
+    margin: auto;
+    padding: 10px;
 }
