--- a/src/App.css
+++ b/src/App.css
@@ -370,3 +370,14 @@ HOME PAGE
     color: #444;
     margin-bottom: 4px;
 }
+
+@media only screen and (max-width:700px) {
+    .item-detail {
+        flex-direction: column;
+    }
+
+    .item-detail-imgs,
+    .item-detail-body {
+        width: 100%;
+    }
+}
