--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ header {
     background: #fff;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     padding: 0 10px;
+    z-index: 100;
 }
 
 .header-container {
